@@ -173,3 +173,4 @@ ham_trap_white=0
 collect_restart=0
 secmx_nodns=0
 usermin_switch=1
+plan_auto=1
