@@ -20,6 +20,7 @@ show_quotas=Show disk usage on main page?,1,1-Yes,0-No
 show_mailsize=Show mailbox size in users list?,1,1-Yes,0-No
 show_sysinfo=Show system information on main page?,1,1-Yes,0-No,2-Only for master admin,3-Only for master and resellers
 template_auto=Allow editing of limits when creating server?,1,0-Yes,1-No
+plan_auto=Set default features from plan when creating server?,1,1-Yes,0-No
 domains_sort=Sort virtual servers by,1,user-Owner with subserver tree,dom-Domain name,owner-Description,sub-Domain name with subserver tree
 show_ugroup=Allow selection of different group for server admins?,1,1-Yes,0-No
 theme_image=URL for company logo image,3,None or default,50
