@@ -1,0 +1,9 @@
+<header>Set default features from plan when creating server?</header>
+
+When this option is set to <b>Yes</b>, the features enabled by default for
+new top-level virtual servers are set based on those allowed by the selected
+plan. When <b>No</b> is chosen, the default features are determined by the
+<b>Features and Plugins</b> page. <p>
+
+<footer>
+
